# e-shop

./: data.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_slug.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  decorators.py  form.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_description_and_more.py  0003_contacts.py  0004_alter_product_created_at_alter_product_mod_at.py  0005_version.py  0006_alter_version_options.py  0007_product_owner.py  0008_product_status.py  0009_alter_product_options.py  0010_alter_product_options.py
catalog/templates/catalog/: base.html  category_confirm_delete.html  category_form.html  category_list.html  contacts.html  create_product.html  home.html  product.html  product_confirm_delete.html  product_form.html  products.html  update_product.html
catalog/templates/catalog/includes/: inc_navbar.html
catalog/templatetags/: media_filters.py  media_tags.py
config/: settings.py  urls.py
static/css/: album.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_vrf_token.py  0003_alter_user_vrf_token.py
users/templates/users/: login.html  register.html
